# tinyFPIE

./: CMakeLists.txt  README.md  bencher.txt  benchmark.txt  benchmark_cl.py  benchmark_mine.py  benchmark_openmp.py  benchmark_v2.py  benchmark_v3.py  benchmark_v4.py  benchmark_v5.py  benchmarks.txt  config.py  main.py  opencl_solver.py  perf.data  pyproject.toml  run_benchmarks.py  test_likwid  test_likwid.cpp  test_likwid_marker.py
fpie/: process.py
fpie/core/openmp/: CMakeLists.txt  equ.cc  grid.cc  likwid_wrapper.h  multigrid.cc  solver.cc  solver.h  v3.cc  v4.cc  v5.cc
tests/: benchmarks.txt
